--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -12,31 +12,53 @@
 	<h2>
 		<h:outputText value="Lista Clientes"></h:outputText>
 	</h2>
-	<h:dataTable value="#{clienteBean.obtenerClientes()}" var="cliente" border="1">
-		<h:column>
-			<f:facet name="header">Id</f:facet>
-			<h:outputText value="#{cliente.id}"></h:outputText>
-		</h:column>
-		
-		<h:column>
-			<f:facet name="header">Nombre</f:facet>
-			<h:outputText value="#{cliente.nombres}"></h:outputText>
-		</h:column>
-		
-		<h:column>
-			<f:facet name="header">Apellido</f:facet>
-			<h:outputText value="#{cliente.apellidos}"></h:outputText>
-		</h:column>
-		
-		<h:column>
-			<f:facet name="header">Email</f:facet>
-			<h:outputText value="#{cliente.email}"></h:outputText>
-		</h:column>
-		
-		<h:column>
-			<f:facet name="header">Telefono</f:facet>
-			<h:outputText value="#{cliente.telefono}"></h:outputText>
-		</h:column>
-	</h:dataTable>
+	<h:form>
+	<h:commandButton action="#{clienteBean.nuevo()}" value="Nuevo Cliente"></h:commandButton>
+	
+		<h:dataTable value="#{clienteBean.obtenerClientes()}" var="cliente"
+			border="1">
+			<h:column>
+				<f:facet name="header">Id</f:facet>
+				<h:outputText value="#{cliente.id}"></h:outputText>
+			</h:column>
+			<h:column>
+				<f:facet name="header">Nombres</f:facet>
+				<h:outputText value="#{cliente.nombres}"></h:outputText>
+			</h:column>
+			<h:column>
+				<f:facet name="header">Apellidos</f:facet>
+				<h:outputText value="#{cliente.apellidos}"></h:outputText>
+			</h:column>
+			<h:column>
+				<f:facet name="header">Direccion</f:facet>
+				<h:outputText value="#{cliente.direccion}"></h:outputText>
+			</h:column>
+			<h:column>
+				<f:facet name="header">Email</f:facet>
+				<h:outputText value="#{cliente.email}"></h:outputText>
+			</h:column>
+			<h:column>
+				<f:facet name="header">Telefono</f:facet>
+				<h:outputText value="#{cliente.telefono}"></h:outputText>
+			</h:column>
+			<h:column>
+				<f:facet name="header">F. Registro</f:facet>
+				<h:outputText value="#{cliente.fregistro}"></h:outputText>
+			</h:column>
+
+			<h:column>
+				<f:facet name="header">F. Actualizar</f:facet>
+				<h:outputText value="#{cliente.factualizar}"></h:outputText>
+			</h:column>
+			<h:column>
+				<f:facet name="header">Editar</f:facet>
+				<h:commandButton action="#{clienteBean.editar(cliente.id)}" value="Editar"></h:commandButton>
+			</h:column>
+			<h:column>
+				<f:facet name="header">Eliminar</f:facet>
+				<h:commandButton action="#{clienteBean.eliminar(cliente.id)}" value="Eliminar"></h:commandButton>
+			</h:column>
+		</h:dataTable>
+	</h:form>
 </h:body>
 </html>
