--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -1,64 +1,68 @@
 <!DOCTYPE HTML>
 <html lang="es" xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:f="http://xmlns.jcp.org/jsf/core">
+	xmlns:f="http://xmlns.jcp.org/jsf/core"
+	xmlns:p="http://primefaces.org/ui"
+	>
 <h:head>
 	<meta charset="utf-8" name="viewport"
 		content="width=device-width, initial-scale=1"
 		http-equiv="X-UA-Conpatible" />
-	<title>Plantilla Básica JSF</title>
+	<title>CRUD JSF y Primefaces 🤖 </title>
 </h:head>
 <h:body>
-	<h2>
-		<h:outputText value="Lista Clientes"></h:outputText>
-	</h2>
-	<h:form>
-	<h:commandButton action="#{clienteBean.nuevo()}" value="Nuevo Cliente"></h:commandButton>
-	
-		<h:dataTable value="#{clienteBean.obtenerClientes()}" var="cliente"
-			border="1">
-			<h:column>
-				<f:facet name="header">Id</f:facet>
-				<h:outputText value="#{cliente.id}"></h:outputText>
-			</h:column>
-			<h:column>
-				<f:facet name="header">Nombres</f:facet>
-				<h:outputText value="#{cliente.nombres}"></h:outputText>
-			</h:column>
-			<h:column>
-				<f:facet name="header">Apellidos</f:facet>
-				<h:outputText value="#{cliente.apellidos}"></h:outputText>
-			</h:column>
-			<h:column>
-				<f:facet name="header">Direccion</f:facet>
-				<h:outputText value="#{cliente.direccion}"></h:outputText>
-			</h:column>
-			<h:column>
-				<f:facet name="header">Email</f:facet>
-				<h:outputText value="#{cliente.email}"></h:outputText>
-			</h:column>
-			<h:column>
-				<f:facet name="header">Telefono</f:facet>
-				<h:outputText value="#{cliente.telefono}"></h:outputText>
-			</h:column>
-			<h:column>
-				<f:facet name="header">F. Registro</f:facet>
-				<h:outputText value="#{cliente.fregistro}"></h:outputText>
-			</h:column>
 
-			<h:column>
-				<f:facet name="header">F. Actualizar</f:facet>
-				<h:outputText value="#{cliente.factualizar}"></h:outputText>
-			</h:column>
-			<h:column>
-				<f:facet name="header">Editar</f:facet>
-				<h:commandButton action="#{clienteBean.editar(cliente.id)}" value="Editar"></h:commandButton>
-			</h:column>
-			<h:column>
-				<f:facet name="header">Eliminar</f:facet>
-				<h:commandButton action="#{clienteBean.eliminar(cliente.id)}" value="Eliminar"></h:commandButton>
-			</h:column>
-		</h:dataTable>
+    <p:panel header="Lista Clientes">
+    
+	<h:form>
+	<p:commandButton style="margin-left:2%"  action="#{clienteBean.nuevo()}" icon="pi pi-save" value="Nuevo Cliente" ></p:commandButton>
+    	<div class="card" style="margin: 2%" >
+			<p:dataTable value="#{clienteBean.obtenerClientes()}" var="cliente"
+				border="1" size="small" style="font-size: 12px;"  tableStyle="width:auto">
+				<p:column>
+					<f:facet name="header">Id</f:facet>
+					<h:outputText value="#{cliente.id}"></h:outputText>
+				</p:column>
+				<p:column>
+					<f:facet name="header">Nombres</f:facet>
+					<h:outputText value="#{cliente.nombres}"></h:outputText>
+				</p:column>
+				<p:column>
+					<f:facet name="header">Apellidos</f:facet>
+					<h:outputText value="#{cliente.apellidos}"></h:outputText>
+				</p:column>
+				<p:column>
+					<f:facet name="header">Direccion</f:facet>
+					<h:outputText value="#{cliente.direccion}"></h:outputText>
+				</p:column>
+				<p:column>
+					<f:facet name="header">Email</f:facet>
+					<h:outputText value="#{cliente.email}"></h:outputText>
+				</p:column>
+				<p:column>
+					<f:facet name="header">Telefono</f:facet>
+					<h:outputText value="#{cliente.telefono}"></h:outputText>
+				</p:column>
+				<p:column>
+					<f:facet name="header">F. Registro</f:facet>
+					<h:outputText value="#{cliente.fregistro}"></h:outputText>
+				</p:column>
+	
+				<p:column>
+					<f:facet name="header">F. Actualizar</f:facet>
+					<h:outputText value="#{cliente.factualizar}"></h:outputText>
+				</p:column>
+				<p:column>
+					<f:facet name="header">Editar</f:facet>
+					<p:commandButton action="#{clienteBean.editar(cliente.id)}" styleClass="ui-button-secondary" icon="pi pi-pencil" value="Editar"></p:commandButton>
+				</p:column>
+				<p:column>
+					<f:facet name="header">Eliminar</f:facet>
+					<p:commandButton ajax="false" action="#{clienteBean.eliminar(cliente.id)}" value="Eliminar" icon="pi pi-trash" styleClass="ui-button-danger"></p:commandButton>
+				</p:column>
+			</p:dataTable>
+		</div>
 	</h:form>
+    </p:panel>
 </h:body>
 </html>
